feat: added styles for smaller devices, updated card text

--- a/index.html
+++ b/index.html
@@ -18,26 +18,32 @@
           <h1>Principais Links</h1>
         </section>
         <section class="cards">
-          <a class="contact">
+          <a
+            href="https://wa.me/qr/UA4PUDTDZN5DD1"
+            target="_blank"
+            class="contact"
+          >
             <aside class="box">
               <i class="fa-solid fa-comment"></i>
-              <span>Precisa contratar um Web Designer?</span>
+              <span
+                >Precisa contratar <br />
+                um Web Designer?</span
+              >
               <p>Clique aqui para fazer um orçamento diretamente comigo.</p>
             </aside>
           </a>
           <article class="group-cards">
-            <a class="cdt">
+            <a href="" target="_blank" class="cdt">
               <aside class="box">
                 <img src="./images/logo-cdt.png" alt="logo CDT" />
-                <span>Gestão Estratégica de Sistemas e Tecnologia</span>
+                <span>Gestão Digital Estratégica</span>
                 <p>
-                  Problemas com suas redes ou sites? Aumente sua autoridade com
-                  soluções profissionais e suporte exclusivo para sites,
-                  e-mails, redes sociais e hospedagem.
+                  Aumente sua autoridade com soluções profissionais e suporte
+                  exclusivo para sites, redes sociais e hospedagem.
                 </p>
               </aside>
             </a>
-            <a class="portfolio">
+            <a href="" target="_blank" class="portfolio">
               <aside class="box">
                 <i class="fa-solid fa-address-book"></i>
                 <span>Portfólio</span>
