--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </aside>
           </a>
           <article class="group-cards">
-            <a href="" target="_blank" class="cdt">
+            <a href="./sorry.html" target="_self" class="cdt">
               <aside class="box">
                 <img src="./images/logo-cdt.png" alt="logo CDT" />
                 <span>Gestão Digital Estratégica</span>
@@ -43,7 +43,7 @@
                 </p>
               </aside>
             </a>
-            <a href="" target="_blank" class="portfolio">
+            <a href="./sorry.html" target="_self" class="portfolio">
               <aside class="box">
                 <i class="fa-solid fa-address-book"></i>
                 <span>Portfólio</span>
