--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" type="imagex/png" href="./images/logo.jpg" />
     <link rel="stylesheet" href="style.css" />
     <script
       src="https://kit.fontawesome.com/9c7d743b7c.js"
@@ -24,7 +25,7 @@
             class="contact"
           >
             <aside class="box">
-              <i class="fa-solid fa-comment"></i>
+              <i class="fa-solid fa-comment-dots"></i>
               <span
                 >Precisa contratar <br />
                 um Web Designer?</span
@@ -35,7 +36,7 @@
           <article class="group-cards">
             <a href="./sorry.html" target="_self" class="cdt">
               <aside class="box">
-                <img src="./images/logo-cdt.png" alt="logo CDT" />
+                <i class="fa-solid fa-circle-up"></i>
                 <span>Gestão Digital Estratégica</span>
                 <p>
                   Aumente sua autoridade com soluções profissionais e suporte
