refactor: link whatsapp updated

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </section>
         <section class="cards">
           <a
-            href="https://wa.me/qr/UA4PUDTDZN5DD1"
+            href="https://wa.me/message/M7JGSRQMUK2IC1"
             target="_blank"
             class="contact"
           >
