refactor: text line wrapping and responsive styles added

--- a/index.html
+++ b/index.html
@@ -37,10 +37,13 @@
             <a href="./sorry.html" target="_self" class="cdt">
               <aside class="box">
                 <i class="fa-solid fa-circle-up"></i>
-                <span>Gestão Digital Estratégica</span>
+                <span
+                  >Gestão Digital <br />
+                  Estratégica</span
+                >
                 <p>
                   Aumente sua autoridade com soluções profissionais e suporte
-                  exclusivo para sites, redes sociais e hospedagem.
+                  exclusivo para sites, anúncios online e hospedagem.
                 </p>
               </aside>
             </a>
