--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
                 >Precisa contratar <br />
                 um Web Designer?</span
               >
-              <p>Clique aqui para fazer um orçamento diretamente comigo.</p>
+              <p>Faça um orçamento diretamente comigo.</p>
+              <button class="btn">Acessar</button>
             </aside>
           </a>
           <article class="group-cards">
@@ -45,13 +46,15 @@
                   Aumente sua autoridade com soluções profissionais e suporte
                   exclusivo para sites, anúncios online e hospedagem.
                 </p>
+                <button class="btn">Acessar</button>
               </aside>
             </a>
             <a href="./sorry.html" target="_self" class="portfolio">
               <aside class="box">
                 <i class="fa-solid fa-address-book"></i>
                 <span>Portfólio</span>
-                <p>Conheça mais sobre os meus serviços clicando aqui.</p>
+                <p>Conheça mais sobre os meus serviços.</p>
+                <button class="btn">Acessar</button>
               </aside>
             </a>
           </article>
