feat: pages folder, css and portfolio file added and styled

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" type="imagex/png" href="./images/logo.jpg" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <script
       src="https://kit.fontawesome.com/9c7d743b7c.js"
       crossorigin="anonymous"
@@ -35,7 +35,7 @@
             </aside>
           </a>
           <article class="group-cards">
-            <a href="./sorry.html" target="_self" class="cdt">
+            <a href="./pages/sorry.html" target="_self" class="cdt">
               <aside class="box">
                 <i class="fa-solid fa-circle-up"></i>
                 <span
@@ -49,7 +49,7 @@
                 <button class="btn">Acessar</button>
               </aside>
             </a>
-            <a href="./sorry.html" target="_self" class="portfolio">
+            <a href="./pages/portfolio.html" target="_self" class="portfolio">
               <aside class="box">
                 <i class="fa-solid fa-address-book"></i>
                 <span>Portfólio</span>
