refactor: updated home page path

--- a/pages/sorry.html
+++ b/pages/sorry.html
@@ -7,8 +7,8 @@
   </head>
   <body>
     <span>
-      <a href="./index.html">Voltar</a>
       <p>Página em construção, desculpe!</p>
+      <a href="../index.html">Voltar</a>
     </span>
   </body>
   <style>
@@ -34,6 +34,14 @@
         align-items: center;
         gap: 1rem;
 
+        & p {
+          font-size: 20px;
+          text-align: center;
+          text-transform: uppercase;
+          font-weight: 800;
+          color: #000;
+        }
+
         & a {
           font-size: 16px;
           font-weight: 800;
@@ -43,14 +51,6 @@
           border-radius: 5rem;
 
           background-color: rgba(255, 0, 0, 0.753);
-          color: #000;
-        }
-
-        & p {
-          font-size: 20px;
-          text-align: center;
-          text-transform: uppercase;
-          font-weight: 800;
           color: #000;
         }
       }
