refactor: company class texts and name changed

--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
                 >Precisa contratar <br />
                 um Web Designer?</span
               >
-              <p>Faça um orçamento diretamente comigo.</p>
+              <p>Solicite um orçamento personalizado.</p>
               <button class="btn">Acessar</button>
             </aside>
           </a>
           <article class="group-cards">
-            <a href="./pages/sorry.html" target="_self" class="cdt">
+            <a href="./pages/sorry.html" target="_self" class="enterprise">
               <aside class="box">
                 <i class="fa-solid fa-circle-up"></i>
                 <span
@@ -53,7 +53,7 @@
               <aside class="box">
                 <i class="fa-solid fa-address-book"></i>
                 <span>Portfólio</span>
-                <p>Conheça mais sobre os meus serviços.</p>
+                <p>Conheça mais sobre os nossos serviços.</p>
                 <button class="btn">Acessar</button>
               </aside>
             </a>
